--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -3,8 +3,8 @@
     <a (click)="logout()" class="navbar-text navbar-right navbar-link">Logout</a>
   </div>
 </nav>
-<h1 class="header">Logged User Page 
-  {{ message | async | json }}</h1>
+<h1 class="header">Logged User Page </h1>
+<p>{{ message | async | json }}</p>
 <div class="row">
   <div class="col-md-4 col-md-offset-4">
     <div class="card" style="width: 20rem;">
